Stop the masthead description being clipped.

--- a/app/assets/stylesheets/components/masthead.css.scss
+++ b/app/assets/stylesheets/components/masthead.css.scss
@@ -80,7 +80,7 @@
   position: absolute;
   top: -3px;
   left: -6px;
-  z-index: 10;
+  z-index: 1;
 }
 
 .masthead__links,
